Changelog for the Curses::UI distribution:

Version 0.9609
==============
        - Bugfix for crashing error in 0.9608

Version 0.9608
==============
        - TextEditor doc patch from Zane C.B.
        - Patch to allow mainloop to halt from Zane C.B.
        - key handling fix from Scott McCoy
        - Background color set patch from Miquel van Smoorenburg
        - AIX fix from Shava Smallen
        - Fix for prototypes warnings from Damyan Ivanov

Version 0.9607
==============
        - Curses::UI::set_timer no longer calls int() on passed time value,
          allowing Time::HiRes support, thanks to Gilmar Santos, Jr. (RT#29026)
        - Fixed ancient bug in Popupmenu.pm, thanks to Davide Chiarini
          and Michael Arlt (RT#38211,25885)
        - POD testing bug introduced in last version now fixed

Version 0.9606
==============
	- Patch to Notebook.pm from Dominque Dumont (RT#39915)
        - Test::POD no longer required for install

Version 0.9605
==============
	- MANIFEST in 0.9604 was bad, causing pertesters FAIL

Version 0.9604
==============
	- MainLoop removal broke several examples. Fixed (thanks to
	  Antony Gelberg)
	- Japanese localization added (thanks Takatoshi Kitano)

Version 0.9603
==============
	- MainLoop has been removed (please use '$cui->mainloop')
	- So the circular reference of $Curses::UI::rootobject has
	  been removed as well
	- RT bugs 31919, 11925 (Notebook.pm testing failures) fixed,
	  again thanks to Russ Allbery
	- UI.pm now uses strict and warnings(!)
	- UI.pm's POD and layout being overhauled
	- BUGS and TODO have been nuked (RT, googlecode)

Version 0.9602
==============
	- Using Module::Install now
	- Removed effectively null t/99template.t which was causing
	  FAILs for CPAN testers (to be replaced with more testing
	  at a later date)
	- Apologies for the weird previous version number

Version 0.96_01
===============
	- Fixed bug in C::UI::Checkbox->get (RT#31916, Russ Allbery)