@@ -19,7 +19,7 @@ no_index:
     - inc
     - t
 requires:
-  Curses: 0
+  Curses: '1.29'
   Term::ReadKey: 0
 resources:
   license: http://dev.perl.org/licenses/
