@@ -6,7 +6,7 @@ name            'Curses-UI';
 all_from        'lib/Curses/UI.pm';
 
 # Specific dependencies
-requires        'Curses'        => 0;
+requires        'Curses'        => '1.29';
 requires        'Term::ReadKey' => 0;
 
 no_index        'directory'         => 'examples';
